<resources>
    <string name="app_name">RoomKotlin</string>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_name_hint">Enter Name</string>
    <string name="user_profile_phone_hint">Enter Phone</string>
    <string name="user_profile_email_hint">Enter Email</string>
    <string name="user_address_title">User Address</string>
    <string name="user_address_name_hint">Enter Address</string>
    <string name="user_address_city_hint">Enter City</string>
    <string name="user_address_state_hint">Enter State</string>
    <string name="user_address_zip_hint">Enter Zip</string>
    <string name="submit_button_text">Save</string>
</resources>